--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "spatie/laravel-translatable": "^6.5",
         "stripe/stripe-php": "^10.20"
     },
     "require-dev": {
